--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,10 @@
-name: CI with Caching
+name: Kubsh CI with Cache
 
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-
-env:
-  PROJECT_DIR: "./kubsh"  # Ваша поддиректория
-  CACHE_KEY: ${{ runner.os }}-${{ hashFiles('**/Makefile', '**/requirements.txt') }}
 
 jobs:
   test:
@@ -17,59 +13,40 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        path: ./repo  # Чистый checkout
     
-    - name: Cache apt packages
+    - name: Cache APT packages
       uses: actions/cache@v4
+      id: cache-apt
       with:
         path: /var/cache/apt
-        key: ${{ runner.os }}-apt-${{ hashFiles('**/.github/workflows/*.yml') }}
-        restore-keys: |
-          ${{ runner.os }}-apt-
+        key: apt-cache-${{ github.sha }}
     
     - name: Cache pip packages
       uses: actions/cache@v4
+      id: cache-pip
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    
-    - name: Cache build artifacts
-      uses: actions/cache@v4
-      with:
-        path: |
-          ${{ env.PROJECT_DIR }}/kubsh  # Исполняемый файл
-          ${{ env.PROJECT_DIR }}/**/*.o  # Объектные файлы
-        key: ${{ env.CACHE_KEY }}-build
-        restore-keys: |
-          ${{ env.CACHE_KEY }}-build
+        key: pip-cache-${{ github.sha }}
     
     - name: Install system dependencies
+      if: steps.cache-apt.outputs.cache-hit != 'true'
       run: |
         sudo apt-get update
         sudo apt-get install -y \
           g++ \
           make \
           python3 \
-          python3-pip \
-          python3-venv
+          python3-pip
     
-    - name: Setup Python environment
-      working-directory: ${{ env.PROJECT_DIR }}
+    - name: Install Python dependencies
+      if: steps.cache-pip.outputs.cache-hit != 'true'
       run: |
-        python3 -m venv venv
-        . venv/bin/activate
-        if [ -f requirements.txt ]; then
-          pip install -r requirements.txt
-        fi
-        pip install pytest
+        pip3 install pytest
     
     - name: Build project
-      working-directory: ${{ env.PROJECT_DIR }}
+      working-directory: ./kubsh
       run: |
-        make clean  # Очищаем для чистоты сборки
+        make clean
         make
     
     - name: Setup test environment
@@ -78,14 +55,6 @@ jobs:
         sudo mkdir -p /opt/tests/users
     
     - name: Run tests
-      working-directory: ${{ env.PROJECT_DIR }}
+      working-directory: ./kubsh
       run: |
-        . venv/bin/activate
-        pytest tests/ -v --junitxml=test-results.xml
-    
-    - name: Upload test results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: ${{ env.PROJECT_DIR }}/test-results.xml
+        pytest tests/ -v
