--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,60 +1,49 @@
-name: Kubsh CI with Cache
+name: Docker CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, develop ]
   pull_request:
     branches: [ main, master ]
 
 jobs:
-  test:
-    runs-on: ubuntu-22.04
+  build-and-test:
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Cache APT packages
-      uses: actions/cache@v4
-      id: cache-apt
+    - name: Build Docker image
+      run: |
+        docker build \
+          --tag kubsh-test:${{ github.sha }} \
+          --tag kubsh-test:latest \
+          .
+    
+    - name: Run tests in container
+      run: |
+        docker run --rm \
+          --name kubsh-tests \
+          kubsh-test:latest
+    
+    - name: Save test results
+      if: always()
+      run: |
+        docker run --rm \
+          --name kubsh-results \
+          -v $(pwd)/test-results:/results \
+          kubsh-test:latest \
+          bash -c "
+            cd /workspace
+            pytest tests/ -v --junitxml=/results/test-results.xml || true
+          "
+    
+    - name: Upload test artifacts
+      uses: actions/upload-artifact@v4
+      if: always()
       with:
-        path: /var/cache/apt
-        key: apt-cache-${{ github.sha }}
-    
-    - name: Cache pip packages
-      uses: actions/cache@v4
-      id: cache-pip
-      with:
-        path: ~/.cache/pip
-        key: pip-cache-${{ github.sha }}
-    
-    - name: Install system dependencies
-      if: steps.cache-apt.outputs.cache-hit != 'true'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          g++ \
-          make \
-          python3 \
-          python3-pip
-    
-    - name: Install Python dependencies
-      if: steps.cache-pip.outputs.cache-hit != 'true'
-      run: |
-        pip3 install pytest
-    
-    - name: Build project
-      working-directory: ./kubsh
-      run: |
-        make clean
-        make
-    
-    - name: Setup test environment
-      run: |
-        sudo chmod a+rw /etc/passwd
-        sudo mkdir -p /opt/tests/users
-    
-    - name: Run tests
-      working-directory: ./kubsh
-      run: |
-        pytest tests/ -v
+        name: test-results
+        path: |
+          test-results/
+        retention-days: 7
