--- a/kubsh/Dockerfile
+++ b/kubsh/Dockerfile
@@ -16,31 +16,39 @@ RUN apt-get update && apt-get install -y \
     valgrind \
     && rm -rf /var/lib/apt/lists/*
 
-# Устанавливаем pytest и зависимости для тестов
 RUN pip3 install pytest
 
-# Создаем рабочую директорию
 WORKDIR /workspace
 
-# Копируем исходный код
 COPY . /workspace/
 
 # Создаем тестовую директорию
 RUN mkdir -p /opt/tests/users
-
-# Разрешаем запись в /etc/passwd для тестов
 RUN chmod a+rw /etc/passwd
 
-# Компилируем проект
-RUN make
+# Компилируем проект В ПАПКЕ kubsh
+RUN echo "=== Building kubsh ===" && \
+    cd kubsh && \
+    make && \
+    echo "=== Build result ===" && \
+    ls -la && \
+    echo "=== Binary info ===" && \
+    file ./kubsh
 
-# Создаем скрипт для запуска тестов
+# Создаем скрипт для запуска тестов, который ЗНАЕТ где бинарник
 RUN echo '#!/bin/bash\n\
-cd /workspace\n\
+cd /workspace/kubsh\n\
+echo "=== Current directory for tests: \$(pwd) ==="\n\
+ls -la\n\
 echo "=== Running unit tests ==="\n\
 pytest tests/ -v\n\
 echo "=== Memory check ==="\n\
-valgrind --leak-check=full --error-exitcode=1 ./kubsh --help 2>&1 | tail -20\n\
+if [ -f "./kubsh" ]; then\n\
+    valgrind --leak-check=full --error-exitcode=1 ./kubsh --help 2>&1 | tail -20\n\
+else\n\
+    echo "ERROR: kubsh binary not found in \$(pwd)!"\n\
+    exit 1\n\
+fi\n\
 echo "=== Basic functionality test ==="\n\
 echo "exit" | timeout 5 ./kubsh || true\n\
 ' > /usr/local/bin/run_tests.sh && chmod +x /usr/local/bin/run_tests.sh
