--- a/kubsh/Dockerfile
+++ b/kubsh/Dockerfile
@@ -13,44 +13,21 @@ RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
     git \
-    valgrind \
     && rm -rf /var/lib/apt/lists/*
 
+# Копируем тесты из оригинального контейнера (или устанавливаем их)
+# Если тесты доступны как pip пакет или из git
 RUN pip3 install pytest
 
+# Создаем рабочую директорию
 WORKDIR /workspace
 
-COPY . /workspace/
-
-# Создаем тестовую директорию
-RUN mkdir -p /opt/tests/users
+# Копируем скрипт для запуска тестов
+COPY run_tests.sh /usr/local/bin/
+COPY /tests /opt/tests/
+COPY main.cpp /workspace/
+COPY Makefile /workspace/
+RUN chmod +x /usr/local/bin/run_tests.sh
 RUN chmod a+rw /etc/passwd
 
-# Компилируем проект В ПАПКЕ kubsh
-RUN echo "=== Building kubsh ===" && \
-    cd kubsh && \
-    make && \
-    echo "=== Build result ===" && \
-    ls -la && \
-    echo "=== Binary info ===" && \
-    file ./kubsh
-
-# Создаем скрипт для запуска тестов, который ЗНАЕТ где бинарник
-RUN echo '#!/bin/bash\n\
-cd /workspace/kubsh\n\
-echo "=== Current directory for tests: \$(pwd) ==="\n\
-ls -la\n\
-echo "=== Running unit tests ==="\n\
-pytest tests/ -v\n\
-echo "=== Memory check ==="\n\
-if [ -f "./kubsh" ]; then\n\
-    valgrind --leak-check=full --error-exitcode=1 ./kubsh --help 2>&1 | tail -20\n\
-else\n\
-    echo "ERROR: kubsh binary not found in \$(pwd)!"\n\
-    exit 1\n\
-fi\n\
-echo "=== Basic functionality test ==="\n\
-echo "exit" | timeout 5 ./kubsh || true\n\
-' > /usr/local/bin/run_tests.sh && chmod +x /usr/local/bin/run_tests.sh
-
-CMD ["/usr/local/bin/run_tests.sh"]
+CMD ["bash", "-c", "/usr/local/bin/run_tests.sh; /bin/bash"]
